# tigra-project

./: .gitattributes  .gitignore  NOTES.md  README.md  pin_usage.md  real_time_plot.m  render_value.m  requirements.dev.txt  requirements.txt  ros_serial_link.launch
ackermann_controller_plugin/: CMakeLists.txt  package.xml
ackermann_controller_plugin/src/: plugin.cpp
ackermann_raw_controller_plugin/: CMakeLists.txt  package.xml
ackermann_raw_controller_plugin/config/: ackermann_raw_controller_plugin.yaml
ackermann_raw_controller_plugin/include/: plugin.h
ackermann_raw_controller_plugin/src/: plugin.cpp
samples/rosserial_socket_sample/: CMakeLists.txt  build.sh
samples/rosserial_socket_sample/include/: ros.h  socket_hardware.h
samples/rosserial_socket_sample/src/: main.cpp
tigra-project/: CMakeLists.txt  package.xml
tigra_description/: CMakeLists.txt  README.md  package.xml
tigra_description/config/: props.yaml
tigra_description/launch/: all_start.launch  concatenate_point_cloud.launch  gmap_for_tigra.launch  gmapping.launch  keyop.launch  octomap_server.launch  robot.launch  rviz_start.launch  stereo_image_processing.launch  tigra.launch  tigra_lidar.launch  tigra_overview_spawner.launch
tigra_description/meshes/: quadro.dae
tigra_description/models/: base_new_circle_coridor_loop_lit_cut_low_walls_with_floors_black_v2_0.dae  circle_coridor_loop_lit.dae  circle_coridor_loop_lit_cut.dae  circle_coridor_loop_lit_cut_050_with_floor.dae  circle_coridor_loop_lit_cut_052_with_floor.dae  circle_coridor_loop_lit_cut_052_with_floor_color.dae  circle_coridor_loop_lit_cut_low_walls.dae  circle_coridor_loop_lit_cut_low_walls_with_floors_black_color.dae  corridor_new.dae  loop_coridor_with_wall_new.dae  loop_coridor_with_walls.dae  loop_coridor_with_walls_without_floor.dae
tigra_description/plugins/: drive.cpp  plugin.cpp  plugin.h
tigra_description/rviz/: config.rviz  laser_scan_overview.rviz  map.pgm  map.yaml  overview.rviz  tigra_overview_setting.rviz
tigra_description/src/: plugin.cpp  simple_world_plugin.cpp
tigra_description/urdf/: base.urdf.xacro  circle_overview_bot_macro.urdf.xacro  lidar.urdf.xacro  params.urdf.xacro  robot.urdf.xacro  robot_with_cameras.urdf.xacro  springrobot.urdf.xacro  springrobot_new.urdf.xacro  tigra.urdf.xacro  tigra_damping.urdf copy.xacro  tigra_damping.urdf.xacro  tigra_no_spring.urdf.xacro  tigra_robocross21.urdf.xacro  tigra_w_lidar.urdf.xacro  wheels.urdf.xacro
tigra_description/urdf/macros/: camera.urdf.xacro  common.urdf.xacro  damping_wheels.urdf.xacro  inertia.urdf.xacro  lidar.urdf.xacro  tigra_params.urdf.xacro  wheels.urdf.xacro
tigra_description/urdf/to-fix/: tigra_damping.urdf.xacro  tigra_w_360_cameras.urdf.xacro
tigra_description/worlds/: ETU.world  corridor.world  empty.world  lab.world  mcity.world  new_ETU.world
tigra_description/worlds/How_long_have_I_been_here/: model.config  model.sdf
tigra_description/worlds/urambumba/: model.config  model.sdf
tigra_msgs/: CMakeLists.txt  package.xml
tigra_msgs/msg/: TigraState.msg
tigra_msgs/scripts/: create_uc_ros_lib.py
tigra_software/: CMakeLists.txt  README.md  package.xml
tigra_software/config/: joy_teleop.yaml  m8n.yaml  phone_sensors.yaml  robot_layer.yaml  route.yaml
tigra_software/config/ekf/: dual_ekf_navsat_example.yaml  ekf_local.yaml  ekf_map.yaml  ekf_map_test.yaml  ekf_odom.yaml  ekf_pepelac.yaml  ekf_pepelac_map.yaml  (+3 more)
tigra_software/launch/: all_start.launch  amcl.launch  buf.launch  concatenate_point_cloud.launch  full_start_joy_control.launch  gmap.launch  gmap_for_tigra.launch  gmapping.launch  keyop.launch  move_base.launch  point_to_laser.launch  rtabma_try.launch  rtabmap_visual_SLAM_front_cam.launch  rviz_start.launch  show_merged_image.launch  start_cam_mapping.launch  start_for_bag_record_with_new_odometry.launch  start_for_bag_record_with_original_odometry.launch  start_hardware.launch  start_hardware_ir.launch  stereo_image_processing.launch  tf_publisher.launch  tigra_gps.launch  tigra_overview_spawner.launch  tigra_software.launch  tigra_with_point_to_laser.launch  trajectory_record_real_odom.launch  trajectory_record_visual_odom.launch  visual_odometry.launch
tigra_software/scripts/: control_link.py  control_link_old.py  convert.py  guicontrol.py  joy_ctrl.py  joy_teleop.py  lead_cam_link_to_base_link.py  mavros_to_rtcm_converter.py  phone_server.py  pub_odom_from_gazebo.py  routes_gen.py  safety_scanner.py  set_datum.sh  sign_nums_subs.py  sign_nums_subsV2.py
tigra_software/src/: concatenate_point_cloud_tigra.cpp
tigra_vision/: CMakeLists.txt  package.xml
tigra_vision/_todo/: publish_camera_info.py
tigra_vision/config/: elp_stereo.yaml  elp_stereo_gazel.yaml  head_stereo.yaml  rtab_stereo_odometry.yaml  rtabmap.yaml
tigra_vision/launch/: camera_info_from_calib_param.launch  camera_info_listener_publisher.launch  cameras_driver_usb.launch  obstacles_detection.launch  rgbd_odom.launch  rtabmap_HHM_sim.launch  rtabmap_HHM_test.launch  rtabmap_HandHeldMapping.launch  rtabmap_fake2d.launch  rtabmap_lidar_cam_standalone.launch  rtabmap_multi.launch  rtabmap_new.launch  rtabmap_old.launch  rtabmap_sim.launch  rtabmap_slam.launch  rtabmap_visual_SLAM.launch  rtabmap_visual_SLAM_copy.launch  run_rtab_with_camera_param.launch  show_images_from_cameras.launch  show_merged_image.launch  start_record_bag.launch  start_rtabmap.launch  start_rtabmap_diff_cam.launch  start_rtabmap_ir_stereo.launch  start_rtabmap_lidar_cam.launch  start_rtabmap_lidar_cam_nami.launch  start_rtabmap_multi.launch  start_rtabmap_stereo.launch  stereo_img_proc.launch
tigra_vision/rviz/: check_c16_lidar.rviz  check_ch64w_lidar.rviz  check_multiply_rs.rviz  check_rs.rviz  check_t265_d435.rviz  d435_view.rviz  rs_pointcloud.rviz  start_t265.rviz
tigra_vision/scripts/: calib_install.sh  camera_info_listener.py  camera_info_pub_from_calib_param.py  convert_path_type_data_to_tum_type.py  list_camera_formats.sh  my_odom.py  record_bag_file.sh  set_cam_transform.py  set_cameras_parameters.sh
tigra_vision/udev/: 10.depnb.rules  10.tigra.rules
(+490 files in other folders)
