<?xml version="1.0"?>
<package>
  <name>ackermann_raw_controller_plugin</name>
  <version>0.0.0</version>
  <description>The ackermann_raw_controller_plugin package</description>

  <maintainer email="alexey@todo.todo">alexey</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>tigra_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>
