<?xml version="1.0"?>
<package format="2">

  <name>ackermann_raw_controller_plugin</name>
  <version>0.0.0</version>
  <description>The ackermann_raw_controller_plugin package</description>
  <maintainer email="alexey@todo.todo">alexey</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>realtime_tools</depend>
  <depend>tigra_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>

</package>
