<?xml version="1.0"?>
<package format="2">

  <name>tigra_description</name>
  <version>0.0.0</version>
  <description>The tigra_description package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" />
    <gazebo_ros gazebo_media_path="${prefix}" />
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>

</package>
