<?xml version="1.0"?>
<package format="2">
  <name>tigra_software</name>
  <version>0.0.0</version>
  <description>The tigra_software package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->

  <maintainer email="shnuer@todo.todo">shnuer</maintainer>



  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>tigra_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>tf</build_depend>
  <!-- <build_export_depend>tf</build_export_depend> -->
  <exec_depend>tf</exec_depend>
  <build_depend>yaml-cpp</build_depend>
  <!-- <build_export_depend>yaml-cpp</build_export_depend> -->
  <exec_depend>yaml-cpp</exec_depend>

  <build_depend>libpcl-all-dev</build_depend>
  <!-- <build_export_depend>libpcl-all-dev</build_export_depend> -->
  <exec_depend>libpcl-all</exec_depend>

  <build_depend>pcl</build_depend>
  <!-- <build_export_depend>pcl</build_export_depend> -->
  <exec_depend>pcl</exec_depend>

  <build_depend>gazebo_ros</build_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>


  </export>
</package>
