<?xml version="1.0"?>
<package format="2">

  <name>tigra_software</name>
  <version>0.0.0</version>
  <description>The tigra_software package</description>
  <maintainer email="shnuer@todo.todo">shnuer</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <build_depend>tigra_msgs</build_depend>

</package>
