<?xml version="1.0"?>
<package format="2">

  <name>tigra_software</name>
  <version>0.0.0</version>
  <description>The tigra_software package</description>
  <maintainer email="shnuer@todo.todo">shnuer</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tigra_msgs</depend>
  <depend>realtime_tools</depend>

</package>
